add bash docker arch

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -50,7 +50,8 @@ RUN pacman -Sy --noconfirm --needed \
     npm \
     neovim \
     vim \
-    yarn
+    yarn \
+    bash
 
 # Install Rust (rustup and cargo)
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
